--- a/Morze.Shop.GUI_WPF_Application/Product_creation.xaml
+++ b/Morze.Shop.GUI_WPF_Application/Product_creation.xaml
@@ -6,7 +6,7 @@
         xmlns:local="Morze.Shop.GUI_WPF_Application.Product_creation"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Product_creation"  MinWidth="300" MinHeight="500" Width="400" Height="500" >
+        Title="Product_creation"  MinWidth="420" MinHeight="410" Width="420" Height="410" MaxWidth="420" MaxHeight="410" >
     <Grid Background="#ffdadada">
         <Border MinWidth="300" Margin="9" Background="White" VerticalAlignment="Center" Padding="30"
                 MaxHeight="500" CornerRadius="20">
@@ -14,13 +14,15 @@
                 <DropShadowEffect BlurRadius="30" Color="LightGray" ShadowDepth="0"/>
             </Border.Effect>
             <StackPanel>
-                <TextBlock Text="Создание товара" FontSize="15" FontWeight="Bold" HorizontalAlignment ="Center" Margin="0 0 0 20"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите код товара"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите код продажи"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите название товара"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите цену товара"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите единицу измерения товара"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите количества товара"  Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                <TextBlock Text="Создание товара" FontSize="20" FontWeight="Bold" HorizontalAlignment ="Center" Margin="0 0 0 10"/>
+                <TextBox materialDesign:HintAssist.Hint="Введите название товара" x:Name="textBox_productName" FontSize="15"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                <materialDesign:PackIcon Kind="RenameBox" Width="30" Height="30" Margin="295 -25 0 0"/>
+                <TextBox materialDesign:HintAssist.Hint="Введите цену товара" x:Name="textBox_price" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                <materialDesign:PackIcon Kind="Cash100" Width="30" Height="30" Margin="295 -25 0 0"/>
+                <TextBox materialDesign:HintAssist.Hint="Введите количества товара" x:Name="textBox_amount" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                <materialDesign:PackIcon Kind="PackageVariantClosedAdd" Width="30" Height="30" Margin="295 -25 0 0"/>
+                <TextBox materialDesign:HintAssist.Hint="Введите номер клиента" x:Name="textBox_clientID" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                <materialDesign:PackIcon Kind="Identifier" Width="30" Height="30" Margin="295 -25 0 0"/>
                 <Grid Margin="0 20 0 0">
                     <Button Content="Создать" Cursor="Hand"/>
                 </Grid>
