Создание проверки textbox и запись информации в базу данных. Оформление Xaml кода.

--- a/Morze.Shop.GUI_WPF_Application/Registration.xaml
+++ b/Morze.Shop.GUI_WPF_Application/Registration.xaml
@@ -6,29 +6,42 @@
         xmlns:local="clr-namespace:Morze.Shop.GUI_WPF_Application"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Registration"  MinWidth="420" MinHeight="470" Width="420" Height="470" >
+        Title="Регистрация"  MinWidth="420" MinHeight="470" Width="420" Height="470" >
     <Grid Background="#ffdadada">
         <Border MinWidth="300" Margin="9" Background="White" VerticalAlignment="Center" Padding="30"
                 MaxHeight="500" CornerRadius="20">
             <Border.Effect>
                 <DropShadowEffect BlurRadius="30" Color="LightGray" ShadowDepth="0"/>
             </Border.Effect>
+            
             <StackPanel>
                 <TextBlock Text="Регистрация" FontSize="20" FontWeight="Bold" HorizontalAlignment ="Center" Margin="0 0 0 10"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите Имя" x:Name="textBox_FirstName" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 30 0"/>
+                
+                <TextBox x:Name="textBox_FirstName" materialDesign:HintAssist.Hint="Введите Имя"
+                         FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 30 0"/>
                 <materialDesign:PackIcon Kind="BadgeAccountHorizontal" Width="25" Height="25" Margin="300 -25 0 0"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите Фамилию" x:Name="textBox_LastName" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 30 0"/>
+
+                <TextBox x:Name="textBox_LastName" materialDesign:HintAssist.Hint="Введите Фамилию"
+                         FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 30 0"/>
                 <materialDesign:PackIcon Kind="BadgeAccountHorizontalOutline" Width="25" Height="25" Margin="300 -25 0 0"/>
-                <TextBox materialDesign:HintAssist.Hint="Введите логин" x:Name="textBox_login" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 30 0"/>
+
+                <TextBox x:Name="textBox_login" materialDesign:HintAssist.Hint="Введите логин"
+                         FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 30 0"/>
                 <materialDesign:PackIcon Kind="Login" Width="30" Height="30" Margin="295 -30 0 0"/>
-                <PasswordBox materialDesign:HintAssist.Hint="Введите пароль" x:Name="textBox_password" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0 0 30 0"/>
+
+                <PasswordBox x:Name="passwordBox" materialDesign:HintAssist.Hint="Введите пароль"
+                             FontSize="15" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0 0 30 0"/>
                 <materialDesign:PackIcon Kind="Lock" Width="30" Height="30" Margin="295 -30 0 0"/>
-                <PasswordBox materialDesign:HintAssist.Hint="Повторите пароль" x:Name="textBox_password2" FontSize="15" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0 0 30 0"/>
+
+                <PasswordBox x:Name="passwordBox2" materialDesign:HintAssist.Hint="Повторите пароль"
+                             FontSize="15" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" Margin="0 0 30 0"/>
                 <materialDesign:PackIcon Kind="LockCheck" Width="30" Height="30" Margin="295 -30 0 0"/>
+
                 <Grid Margin="0 20 0 0">
                     <Button Content="Зарегистрироваться" Click="Button_Click_Sign_Up" Cursor="Hand" />
                 </Grid>
-                <Button HorizontalAlignment="Center" Content="Войти" Click="Button_Click_MainWindow" Style="{StaticResource MaterialDesignFlatButton}" Cursor="Hand"/>
+                <Button Content="Войти" Click="Button_Click_MainWindow" HorizontalAlignment="Center"  Style="{StaticResource MaterialDesignFlatButton}" Cursor="Hand"/>
+                
             </StackPanel>
         </Border>
     </Grid>
