--- a/Morze.Shop.GUI_WPF_Application/Shop.xaml
+++ b/Morze.Shop.GUI_WPF_Application/Shop.xaml
@@ -6,30 +6,41 @@
         xmlns:local="clr-namespace:Morze.Shop.GUI_WPF_Application"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Shop" MinWidth="960" MinHeight="540" Width="1280" Height="720">
+        Title="Магазин" MinWidth="960" MinHeight="540" Width="1280" Height="720">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="5 30 5 0">
-            <Button Content="Обновить" Margin="0 0 0 15" />
-            <Button Content="Сохранить" Margin="0 0 0 15" />
-            <Button Content="Удалить" Margin="0 0 0 15" />
-            <TextBox materialDesign:HintAssist.Hint="Поиск" FontSize="16" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 35 15"/>
+        <StackPanel Margin="5 50 5 0">
+            <Button Content="Обновить" Click="Button_Click_Refresh" Margin="0 0 0 15" />
+            <Button Content="Сохранить" Click="Button_Click_Save" Margin="0 0 0 15" />
+            <Button Content="Удалить" Click="Button_Click_Delete" Margin="0 0 0 15" />
+            <TextBox materialDesign:HintAssist.Hint="Поиск" x:Name="textBox_Search" FontSize="16" 
+                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 35 15"/>
             <materialDesign:PackIcon Kind="Magnify" Width="30" Height="30" Margin="205 -45 0 0"/>
-            <Button Content="Найти" Margin="0 0 0 15"/>
+            
+            <Button Content="Найти" Click="Button_Click_Search" Margin="0 0 0 15"/>
+            
             <Label Content="Выберите таблицу" FontSize="16" Margin="0 0 0 15"/>
             <materialDesign:PackIcon Kind="DatabaseImport" Width="30" Height="30" Margin="205 -45 0 0"/>
-            <ComboBox materialDesign:HintAssist.Hint="Список" FontSize="16">
-                <TextBlock>Клиенты</TextBlock>
+            
+            <ComboBox materialDesign:HintAssist.Hint="Список" Name="ComboBox_Table" FontSize="16">
                 <TextBlock>Товары</TextBlock>
+                <TextBlock>Клиенты</TextBlock>
             </ComboBox>
         </StackPanel>
+        
+        
         <Grid Grid.Column="1">
-            <DataGrid Name="BD_List" Margin="0 0 0 100" FontSize="16"/>
-            <Button HorizontalAlignment="Right" Content="Создать товар" Click="Button_Click_Product_creation" Margin="0 0 250 -600" Cursor="Hand"/>
-            <Button HorizontalAlignment="Right" Content="Выйти из приложения" Click="Button_Exit" Margin="0 0 30 -600" Style="{StaticResource MaterialDesignFlatButton}"/>
+            <materialDesign:PackIcon Kind="Account" Width="30" Height="30" Margin="850 10 0 0"/>
+            <Label x:Name="label_login" Margin="880 10 0 0" FontSize="16"/>
+            <DataGrid Name="BD_List" Margin="0 50 0 100" FontSize="16" AutoGenerateColumns="True" />
+
+            <Button Content="Создать товар" HorizontalAlignment="Right"
+                    Click="Button_Click_Product_creation" Margin="0 0 250 -600" Cursor="Hand"/>
+            <Button Content="Выйти из приложения" HorizontalAlignment="Right"  
+                    Click="Button_Exit" Margin="0 0 30 -600" Style="{StaticResource MaterialDesignFlatButton}"/>
         </Grid>
     </Grid>
 </Window>
