--- a/Morze.Shop.GUI_WPF_Application/Product_creation.xaml
+++ b/Morze.Shop.GUI_WPF_Application/Product_creation.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Создание товара"  MinWidth="420" MinHeight="450" Width="420" Height="450" MaxWidth="420" MaxHeight="450" >
-    <Grid Background="#ffdadada">
-        <Border MinWidth="300" Margin="9" Background="White" VerticalAlignment="Center" Padding="30"
+    <Grid Background="#FFDADADA">
+        <Border MinWidth="300" Margin="9" Background="#FFFFFF" VerticalAlignment="Center" Padding="30"
                 MaxHeight="500" CornerRadius="20">
             <Border.Effect>
                 <DropShadowEffect BlurRadius="30" Color="LightGray" ShadowDepth="0"/>
@@ -21,21 +21,18 @@
                 <materialDesign:PackIcon Kind="RenameBox" Width="30" Height="30" Margin="295 -25 0 0"/>
 
                 <TextBox x:Name="textBox_price" materialDesign:HintAssist.Hint="Введите цену товара"
-                         FontSize="15"  PreviewTextInput="NumberValidationTextBox"
-                         Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                         FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
                 <materialDesign:PackIcon Kind="CurrencyRub" Width="30" Height="30" Margin="295 -25 0 0"/>
 
                 <TextBox x:Name="textBox_amount" materialDesign:HintAssist.Hint="Введите количества товара"
-                         FontSize="15"  PreviewTextInput="NumberValidationTextBox"
-                         Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                         FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
                 <materialDesign:PackIcon Kind="PackageVariantClosedAdd" Width="30" Height="30" Margin="295 -25 0 0"/>
 
                 <TextBox x:Name="textBox_clientID" materialDesign:HintAssist.Hint="Введите номер клиента"
-                         FontSize="15" PreviewTextInput="NumberValidationTextBox"
-                         Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
+                         FontSize="15" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 45 0"/>
                 <materialDesign:PackIcon Kind="Identifier" Width="30" Height="30" Margin="295 -25 0 0"/>
                 <Grid Margin="0 20 0 0">
-                    <Button Content="Создать" Click="Button_Click_CreatingProducttton"  Margin="0 10 0 10" />
+                    <Button Content="Создать" Click="Button_Click_Creating"  Margin="0 10 0 10" />
                 </Grid>
                 <Button  Content="Отмена" Click="Button_Click_OutToShop" Style="{StaticResource MaterialDesignFlatButton}" />
             </StackPanel>
