--- a/Morze.Shop.GUI_WPF_Application/Shop.xaml
+++ b/Morze.Shop.GUI_WPF_Application/Shop.xaml
@@ -12,31 +12,48 @@
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="5 50 5 0">
-            <Button Content="Обновить" Click="Button_Click_Refresh" Margin="0 0 0 15" />
-            <Button Content="Сохранить" Click="Button_Click_Save" Margin="0 0 0 15" />
-            <Button Content="Удалить" Click="Button_Click_Delete" Margin="0 0 0 15" />
+        <StackPanel Margin="5 30 5 30" Background="#F0F0F0" >
+            <Button Content="Обновить" Click="Button_Click_Refresh" Margin="5 20 5 15" />
+            <Button Content="Удалить" Click="Button_Click_Delete" Margin="5 0 5 15" />
             <TextBox materialDesign:HintAssist.Hint="Поиск" x:Name="textBox_Search" FontSize="16" 
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 0 35 15"/>
+                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="5 0 35 15"/>
             <materialDesign:PackIcon Kind="Magnify" Width="30" Height="30" Margin="205 -45 0 0"/>
             
-            <Button Content="Найти" Click="Button_Click_Search" Margin="0 0 0 15"/>
+            <Button Content="Найти" Click="Button_Click_Search" Margin="5 0 5 15"/>
             
             <Label Content="Выберите таблицу" FontSize="16" Margin="0 0 0 15"/>
             <materialDesign:PackIcon Kind="DatabaseImport" Width="30" Height="30" Margin="205 -45 0 0"/>
-            
-            <ComboBox materialDesign:HintAssist.Hint="Список" Name="ComboBox_Table" FontSize="16">
+
+            <ComboBox materialDesign:HintAssist.Hint="Список" Name="ComboBox_Table" FontSize="16" Margin="5 0 5 0">
                 <TextBlock>Товары</TextBlock>
                 <TextBlock>Клиенты</TextBlock>
             </ComboBox>
         </StackPanel>
-        
-        
+
+
         <Grid Grid.Column="1">
             <materialDesign:PackIcon Kind="Account" Width="30" Height="30" Margin="850 10 0 0"/>
             <Label x:Name="label_login" Margin="880 10 0 0" FontSize="16"/>
-            <DataGrid Name="BD_List" Margin="0 50 0 100" FontSize="16" AutoGenerateColumns="True" />
-
+            
+            <DataGrid Name="BD_dataGrid_Client" AutoGenerateColumns="False" FontSize="18" Visibility="Hidden" IsReadOnly="True" Margin="20 50 20 100" >
+                <DataGrid.Columns >
+                    <DataGridTextColumn Header="ID Клиента" FontSize="16" Binding="{Binding ClientId}" />
+                    <DataGridTextColumn Header="Имя" FontSize="16" Binding="{Binding ClientFirstName}" />
+                    <DataGridTextColumn Header="Фамилия" FontSize="16" Binding="{Binding ClientLastName}" />
+                  
+                </DataGrid.Columns>
+            </DataGrid>
+            
+            <DataGrid Name="BD_dataGrid_Product" AutoGenerateColumns="False" FontSize="18" Visibility="Hidden" IsReadOnly="True" Margin="20 50 20 100" >
+                <DataGrid.Columns >
+                    <DataGridTextColumn Header="ID Товара" FontSize="16" Binding="{Binding ProductID}" />
+                    <DataGridTextColumn Header="Название товара" FontSize="16" Binding="{Binding ProductName}"/>
+                    <DataGridTextColumn Header="Цена" FontSize="16" Binding="{Binding Price}" />
+                    <DataGridTextColumn Header="Количетсво" FontSize="16" Binding="{Binding Amount}" />
+                    <DataGridTextColumn Header="Номер клиента" FontSize="16" Binding="{Binding ClientId}" />
+                </DataGrid.Columns>
+            </DataGrid>
+            
             <Button Content="Создать товар" HorizontalAlignment="Right"
                     Click="Button_Click_Product_creation" Margin="0 0 250 -600" Cursor="Hand"/>
             <Button Content="Выйти из приложения" HorizontalAlignment="Right"  
